src/components/principal/principal.css
.app-sa .principal {
  width: 100%;
  position: relative;
}

.app-sa .unit-buttons-container {
  display: inline-grid;
  grid-template-columns: repeat( auto-fit, minmax(40px, 1fr) );
  background-color: #f2f2f2;
  padding: 10px;
  grid-gap: 5px;
  width: 100%;
}

.app-sa .unit-header-wrapper {
  display: inline-grid;
  grid-template-columns: repeat( auto-fit, minmax(40px, 1fr) );
  background-color: #f2f2f2;
  padding: 10px 17px 10px 10px;
  grid-gap: 5px;
  width: 100%;
  grid-row: 1 / span 1;
}

.units-container {
  height: calc(100vh - 360px);
  height: -moz-calc(100vh - 360px);
  height: -webkit-calc(100vh - 360px);
  height: -o-calc(100vh - 360px);
}

.app-sa .unit-wrapper-wrapper {
  display: inline-grid;
  grid-template-columns: repeat( auto-fit, minmax(40px, 1fr) );
  background-color: #f2f2f2;
  padding: 0 0px 10px 10px;
  grid-gap: 5px;
  width: 100%;
  grid-row: 2 / span 1;
  height: calc(100vh - 388px);
  overflow-y: scroll;
  overflow-x: hidden;
}

.app-sa .tab{
  background-color: #f2f2f2;
  border-right : 1px solid;
}

.app-sa .tab-text{
  color: #616161 !important;
  font-size: 20px;
  font-family: Arial;
  font-weight: bold;

}

.unit-wrapper, .unit-buttons-wrapper{

}

.button-hidden{
  visibility: hidden;
}

.button-visible{
  visibility: visible;
}


.app-sa .generate-button {
  color: #f2f2f2;
  background-color: #4682b4;

  font-size: 20px;
  font-family: Arial;
  font-weight: bold;

  border-radius: 1px;
  border-size: 2px;
  box-shadow: 1px 0px 0px 0px;

  padding: 10px;
  margin-left: 10px;
  margin-bottom: 10px;
  width: 10%;
}

.app-sa .generate-button:hover:enabled {
  color: #f2f2f2;
  background-color: #2b506e;
}

